--- a/parsec-free.cabal
+++ b/parsec-free.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                parsec-free
-version:             3.1.11.3
+version:             3.1.11.4
 synopsis:            Parsec API encoded as a deeply-embedded DSL, for debugging and analysis
 description:         Parsec API encoded as a deeply-embedded DSL, for debugging and analysis
 homepage:            https://github.com/jwiegley/parsec-free
@@ -45,6 +45,8 @@ library
     , bytestring
     , text >= 0.2 && < 1.3
     , free
+    , lens
+    , containers
     , transformers >=0.4 && <0.6
     , parsec >= 3.1.11
   default-language:    Haskell2010
