--- a/parsec-free.cabal
+++ b/parsec-free.cabal
@@ -43,7 +43,7 @@ library
   build-depends:       base >=4 && <5
     , mtl
     , bytestring
-    , text >= 0.2 && < 1.3
+    , text >= 0.2
     , free
     , lens
     , containers
